--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vitalets/google-translate-api": "^8.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.4",
-    "mongoose-connect": "^0.0.3",
-    "translate-google": "^1.5.0"
+    "mongoose-connect": "^0.0.3"
   }
 }
