--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.4",
-    "mongoose-connect": "^0.0.3"
+    "mongoose-connect": "^0.0.3",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0"
   }
 }
