--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@vitalets/google-translate-api": "^8.0.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
